// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of next button 1`] = `
<button
  disabled={true}
  type="button"
>
  Next 
  <i
    className="fas fa-chevron-right"
  />
</button>
`;

exports[`Next button with onClick callback 1`] = `
<button
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  Next 
  <i
    className="fas fa-chevron-right"
  />
</button>
`;

exports[`Next button with the next enabled 1`] = `
<button
  disabled={false}
  type="button"
>
  Next 
  <i
    className="fas fa-chevron-right"
  />
</button>
`;
